# reqlight-tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: bump.yml  ci.yml  release.yml
docs/: ROADMAP.md
e2e/: smoke.spec.ts
scripts/: bump.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  constants.rs  error.rs  lib.rs  main.rs  test_utils.rs
src-tauri/src/commands/: codegen.rs  collection_io.rs  curl.rs  http.rs  keychain.rs  mod.rs  oauth.rs  persistence.rs  scripting.rs  websocket.rs
src-tauri/src/models/: auth.rs  auth_tests.rs  collection.rs  environment.rs  extraction.rs  history.rs  mod.rs  request.rs  response.rs  state.rs
src-tauri/src/services/: assertion.rs  assertion_tests.rs  code_generator.rs  code_generator_tests.rs  collection_export.rs  collection_export_tests.rs  collection_import.rs  collection_io.rs  collection_types.rs  curl_exporter.rs  curl_exporter_tests.rs  curl_parser.rs  curl_parser_tests.rs  har_import.rs  http_client.rs  http_client_tests.rs  interpolator.rs  interpolator_tests.rs  junit.rs  keychain.rs  mod.rs  oauth.rs  oauth_tests.rs  openapi_import.rs  persistence.rs  persistence_tests.rs  scripting.rs  scripting_runtime.rs  scripting_tests.rs  websocket.rs  websocket_tests.rs
src/components/codegen/: CodegenModal.svelte
src/components/editor/: AuthEditor.svelte  BodyEditor.svelte  EditorTabs.svelte  ExtractionEditor.svelte  GraphQLEditor.svelte  KeyValueEditor.svelte  MultipartEditor.svelte  OAuth2Editor.svelte  RequestEditor.svelte  ScriptEditor.svelte  URLBar.svelte  URLBar.test.ts  WebSocketPanel.svelte  WsMessageList.svelte
src/components/environment/: EnvironmentEditor.svelte  EnvironmentPicker.svelte
src/components/layout/: MainLayout.svelte
src/components/response/: ResponseBody.svelte  ResponseDiffModal.svelte  ResponseHeaders.svelte  ResponseSearch.svelte  ResponseView.svelte  ResponseView.test.ts  StatusBar.svelte
src/components/runner/: CollectionRunnerModal.svelte
src/components/settings/: SettingsModal.svelte
src/components/shared/: ConfirmDialog.svelte  EmptyState.svelte  EmptyState.test.ts  ErrorFallback.svelte  HttpMethodBadge.svelte  Modal.svelte  Toast.svelte
src/components/sidebar/: CollectionItem.svelte  CollectionItem.test.ts  ContextMenu.svelte  HistorySection.svelte  RequestRow.svelte  SearchBar.svelte  Sidebar.svelte
src/components/toolbar/: CollectionIOModal.svelte  CurlImportModal.svelte  ImportSection.svelte  Toolbar.svelte
src/lib/: commands.ts  constants.ts  type-helpers.ts  types.ts
src/lib/stores/: app.perf.test.ts  app.svelte.ts  toast.test.ts  (+13 more)
(+22 files in other folders)
