[package]
name = "reqlight"
version = "0.1.0"
edition = "2021"

[lib]
name = "reqlight_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "multipart", "stream"] }
keyring = { version = "3" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
urlencoding = "2"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
