[package]
name = "reqlight"
version = "0.6.0"
edition = "2021"
default-run = "reqlight"

[lib]
name = "reqlight_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "reqlight-cli"
path = "src/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "multipart", "stream"] }
keyring = { version = "3" }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
serde_yaml = "0.9"
urlencoding = "2"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
md-5 = "0.10"
rquickjs = { version = "0.11", features = ["classes", "properties", "macro"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
open = "5"

[dev-dependencies]
mockito = "1"
tokio-test = "0.4"
tempfile = "3"
